# szozat-solver

./: .gitignore  README.md  concat_usable_words.py  convert_double_double_words.py  convert_short_double_words.py  magyar_szavak.txt  prepare_data.bat  prepare_obvious.py  requirements.txt  separate_double_double.py  setup.cfg  solver.py  solver_gui.py  szozat-solver-gui.ui  szozat_gui.py
prepare_word_list/: concat_usable_words.py  prepare_obvious.py
src/: __init__.py
src/szozat_solver/: magyar_szavak.txt  prepare_data.bat  solver.py  solver_gui.py  szozat-solver-gui.ui  szozat_gui.py
src/szozat_solver/prepare_word_list/: convert_double_double_words.py  convert_short_double_words.py  separate_double_double.py
src/szozat_solver/submodules/: argparser.py  guess_recommendation.py
src/szozat_solver_petrusjt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
submodules/: guess_recommendation.py
