[metadata]
name = szozat-solver-petrusjt
version = 1.0.1
author = petrusjt
author_email = no@email-for.you
description = Szózat solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petrusjt/szozat-solver
project_urls =
    Bug Tracker = https://github.com/petrusjt/szozat-solver/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src